// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option objc_class_prefix = "Reductech";

package reductechRelativityImport;

service Reductech_Relativity_Import {

    rpc StartImport (StartImportCommand) returns (StartImportReply) {}

    rpc ImportData(stream ImportObject) returns (ImportDataReply){}
}

message StartImportCommand {

    repeated DataField DataFields = 1;

    string RelativityUsername = 2;
    string RelativityPassword = 3;
    string RelativityWebAPIUrl = 4;
    int32 WorkspaceArtifactId =  5;

    string ControlNumberField = 6;
    string FilePathField = 7;
    string FolderPathField = 8;

    message DataField
    {
        string Name = 1;
        DataType dataType = 2;

        enum DataType {
            string = 0;
            int = 1;
            double = 2;
            bool = 3;
            date = 4;
        }
    }
    
}

message ImportObject{
    repeated FieldValue Values = 1;

    message FieldValue
    {
        oneof test_oneof {
            string stringValue = 1;
            int32 intValue = 2;
            double doubleValue = 3;
            bool boolValue = 4;
            string dateValue = 5;
        }
    }

    

}



message StartImportReply {
    bool Success = 1;
    string Message = 2;
}

message ImportDataReply {
    bool Success = 1;
    string Message = 2;
}
